<resources>
    <string name="app_name">Shake To Inform</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="long_message">You seem to be shaking the phone in frustration. Would you like to open the bug report screen?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="bug_report">Bug Report</string>

    <string name="bug_tst">Please describe the bug. What did you do? What did you expect to happen? What actually happened?</string>
    <string name="bug_header">If possible, write the description in English.</string>
    <string name="bug_body">In order to diagnose problems, logs from this client will be sent with this bug report. This bug report, including the logs and the screenshot, will not be publicly visible.</string>
    <string name="describe_your_problem_here">Describe your problem here</string>
</resources>