<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.ShakeToInform.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.ShakeToInform.PopupOverlay">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/back_iv"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        app:tint="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/header_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bug_report"
                        android:layout_marginLeft="8sp"
                        android:layout_toRightOf="@id/back_iv"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="26sp"
                        android:layout_height="26sp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_baseline_send_24"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8sp"
                        app:tint="@color/white"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bug_tst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:layout_below="@id/toolbar_appbar"
            android:text="@string/bug_tst"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bug_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="12sp"
            android:layout_below="@id/bug_tst"
            android:hint="@string/describe_your_problem_here"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bug_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:layout_below="@id/bug_edt"
            android:text="@string/bug_header"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bug_header"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:text="@string/bug_body"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </RelativeLayout>
</layout>
